# panvel-ai-assistant

./: .env.example  .gitignore  DECISOES_ARQUITETURAIS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  health.py  traces.py
backend/app/application/interfaces/: llm.py
backend/app/application/services/: chat.py  filial_tools.py  health.py
backend/app/domain/models/: chat.py  filial.py  llm.py  rag.py  tools.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/llm/: factory.py  gemini_provider.py  mock_provider.py  openai_provider.py
backend/app/infrastructure/prompts/: loader.py
backend/app/infrastructure/rag/: __init__.py  chunker.py  embedder.py  retriever.py  vector_store.py
backend/app/infrastructure/repositories/: filiais.py
backend/app/observability/: traces.py
backend/scripts/: ingest_bulas.py
backend/tests/: test_chat_orchestration.py  test_chat_stream.py  test_filial_repository.py  test_filial_tools.py  test_health.py  test_llm_factory.py  test_observability.py  test_rag_chunker.py  test_rag_retriever.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
prompts/: evaluation-set.md  rag-answering.md  system-assistant.md  tool-calling.md
