[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panvel-ai-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the Panvel generative AI case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai>=1.30.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=16.0.0,<18.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
